<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:id="@+id/user_item_view">

    <ImageView
        android:id="@+id/user_image_view"
        android:layout_width="64dp"
        android:layout_height="64dp"
        tools:src="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/user_text_view"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_weight="1"
        android:textSize="16sp"
        tools:text="User" />
</LinearLayout>