<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/repository_item_view">

    <TextView
        android:id="@+id/repository_text_view"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:textSize="16sp"
        tools:text="Repository" />
</LinearLayout>