<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/user_details_image_view"
        android:layout_width="196dp"
        android:layout_height="196dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:src="@android:drawable/ic_menu_gallery" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text="repos: " />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/user_details_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>